fix(styles): Fix wrong padding and width for container div

--- a/style.css
+++ b/style.css
@@ -57,8 +57,6 @@ body {
 
 .container {
   margin: auto;
-  padding: 1rem;
-  width: 100%;
   max-width: 720px;
   max-height: 1920px;
 }
@@ -215,7 +213,6 @@ footer {
 
   .container {
     padding: 0.5rem;
-    grid-template-areas: 'header' 'section' 'footer';
   }
 
   header,
